naprawy wykaz umow kadry zaznacza sie wiecej i nie wiem dlaczego

--- a/kadry/src/main/webapp/umowa/sub/dane1_edycja_swiadectwo.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_edycja_swiadectwo.xhtml
@@ -29,7 +29,7 @@
                     </p:panelGrid>
                     <p:outputPanel style="padding: 10px;">
                         <h:outputText value="Wybrane są tylko umowy, które zachowują ciągłośc co do dnia"/>
-                        <p:dataTable id="umowalist" value="#{rozwiazanieumowyView.umowykontynuacja}" var="itemumowa" widgetVar="dataListumowa"
+                        <p:dataTable id="umowalist" value="#{rozwiazanieumowyView.umowykontynuacja}" var="itemumowa" widgetVar="dataListumowaswiadectwoedycja"
                               emptyMessage="Brak zawartych umów" 
                              rowKey="#{itemumowa.id}" sortBy="#{itemumowa.dataod}" sortMode="single"
                              style="height: 150px; overflow-y: scroll; width: 1000px;"
