--- a/kadry/src/main/webapp/umowa/sub/dane_umowa_funkcja.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_umowa_funkcja.xhtml
@@ -12,7 +12,7 @@
             <p:panel header="Wykaz umów o pełnienie funkcji / Gdy jest pusta sprawdź w parametrach przyporządkowanie kodu do umowy">
                 <p:dataTable id="datalist" value="#{umowaView.listafunkcja}" var="itemumowafunkcja" widgetVar="dataListumowafunkcja"
                              selection="#{umowaView.selectedlistafumkcja}" emptyMessage="Brak zawartych umów"
-                             rowKey="#{itemumowafunkcja.id}" sortBy="#{itemumowafunkcja.dataod}" sortMode="single"
+                             rowKey="#{itemumowafunkcja.hashCode()}" 
                              style="height: 220px; overflow-y: scroll; width: 1700px;"
                              >
                     <p:ajax event="rowSelect" listener="#{umowaView.aktywujfunkcja}" partialSubmit="true" global="false" update="north, @(form)"/>
@@ -132,7 +132,7 @@
                         </f:facet>
                         <h:outputText value="#{itemumowafunkcja.kodzawodu.symbolkzis}"/>
                     </p:column>
-                      <p:column width="40" style="text-align: center;">
+<!--                      <p:column width="40" style="text-align: center;">
                          <f:facet name="header">
                             <h:outputText value="akt.."/>
                         </f:facet>
@@ -151,7 +151,7 @@
                         <p:commandButton icon="pi pi-trash" actionListener="#{umowaView.usunfunkcja(itemumowafunkcja)}" update="north, akordeon:UmowaListFormFunkcja">
                             <p:confirm type="popup" header="Potwierdzenie" message="Usunąć daną umowę?" icon="pi pi-exclamation-triangle"/>
                         </p:commandButton>
-                    </p:column>
+                    </p:column>-->
                 </p:dataTable>
             </p:panel>
             <p:contextMenu for="datalist" style="width: 200px;">
