--- a/kadry/src/main/webapp/umowa/sub/dane_umowa_zlecenie.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_umowa_zlecenie.xhtml
@@ -139,7 +139,7 @@
                         </f:facet>
                         <h:outputText value="#{itemumowazlec.kodzawodu.symbolkzis}"/>
                     </p:column>
-<!--                      <p:column width="40" style="text-align: center;">
+                      <p:column width="40" style="text-align: center;">
                          <f:facet name="header">
                             <h:outputText value="akt."/>
                         </f:facet>
@@ -177,7 +177,7 @@
                         <p:commandButton icon="pi pi-trash" actionListener="#{umowaView.usunzlecenie(itemumowazlec)}" update="north @(form)  akordeon:UmowaListFormZlecenie">
                             <p:confirm type="popup" header="Potwierdzenie" message="Usunąć daną umowę?" icon="pi pi-exclamation-triangle"/>
                         </p:commandButton>
-                    </p:column>-->
+                    </p:column>
                 </p:dataTable>
             </p:panel>
             <p:contextMenu for="datalist" style="width: 200px;">
