--- a/kadry/src/main/webapp/umowa/sub/dane_umowa_funkcja.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_umowa_funkcja.xhtml
@@ -132,7 +132,7 @@
                         </f:facet>
                         <h:outputText value="#{itemumowafunkcja.kodzawodu.symbolkzis}"/>
                     </p:column>
-<!--                      <p:column width="40" style="text-align: center;">
+                      <p:column width="40" style="text-align: center;">
                          <f:facet name="header">
                             <h:outputText value="akt.."/>
                         </f:facet>
@@ -151,7 +151,7 @@
                         <p:commandButton icon="pi pi-trash" actionListener="#{umowaView.usunfunkcja(itemumowafunkcja)}" update="north, akordeon:UmowaListFormFunkcja">
                             <p:confirm type="popup" header="Potwierdzenie" message="Usunąć daną umowę?" icon="pi pi-exclamation-triangle"/>
                         </p:commandButton>
-                    </p:column>-->
+                    </p:column>
                 </p:dataTable>
             </p:panel>
             <p:contextMenu for="datalist" style="width: 200px;">
