--- a/kadry/src/main/webapp/umowa/sub/dane_umowa_praca.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_umowa_praca.xhtml
@@ -108,7 +108,7 @@
                         </f:facet>
                         <h:outputText value="#{itemumowa.nfz}"/>
                     </p:column>-->
-<!--                    <p:column width="40" style="text-align: center;">
+                    <p:column width="40" style="text-align: center;">
                          <f:facet name="header">
                             <h:outputText value="akt."/>
                         </f:facet>
@@ -147,7 +147,7 @@
                         <p:commandButton icon="pi pi-trash" actionListener="#{umowaView.usun(itemumowa)}" update="north, @(form)">
                             <p:confirm type="popup" header="Potwierdzenie" message="Usunąć daną umowę?" icon="pi pi-exclamation-triangle"/>
                         </p:commandButton>
-                    </p:column>-->
+                    </p:column>
                 </p:dataTable>
             </p:panel>
 <!--            <p:contextMenu for="datalist" style="width: 200px;">
