--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_korekta.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_korekta.xhtml
@@ -8,11 +8,11 @@
     xmlns:bcf="http://brzaskun.com/facelets"
     >
     <p:dialog id="dialoglistaplackorekta" header="Korekta list płac przekroczenie" widgetVar="dialoglistaplackorekta"  maximizable="true"
-              resizable="false"  onShow="ustawdialog('dialoglistaplackorekta','centertile',1800,820);" closeOnEscape="true"
+              resizable="true"  onShow="ustawdialog('dialoglistaplackorekta','centertile',1800,820);" closeOnEscape="true"
               onHide="resetujdialog('dialoglistaplackorekta');" 
-              fitViewport="true">
+              fitViewport="true" >
         <p:ajax event="open" listener="#{pasekwynagrodzenkorektaView.init()}" update="akordeon1:listaplackorekta" global="true"/>
-        <p:ajax event="close" listener="#{pasekwynagrodzenkorektaView.close()}" global="false"/>
+        <p:ajax event="close" listener="#{pasekwynagrodzenkorektaView.close()}" global="false"  update="akordeon1:listaplackorekta"/>
         <p:ajax event="open" listener="#{pasekwynagrodzenkorektaView.open()}" global="false"/>
         <p:tabView id="akordeon1">
             <p:tab title="pracownicy">
@@ -51,7 +51,7 @@
                                 <h:outputText value="#{itempasekpod.kalendarzmiesiac.angaz.przekroczenierok} #{itempasekpod.kalendarzmiesiac.angaz.przekroczeniemc}" rendered="#{itempasekpod.kalendarzmiesiac ne null}"/>
                             </p:column>
                            
-                            <p:column headerText="wiek" width="30"> 
+                            <p:column headerText="wiek" width="30" style="text-align: center;"> 
                                 <h:outputText value="#{itempasekpod.lata}"/>
                             </p:column>
                             <p:column headerText="przychody polska">
@@ -88,8 +88,7 @@
                                  <bcf:outputpl value="#{itempasekpod.podstawaopodatkowania}"/>
                             </p:column>
                             <p:column headerText="skorygowana podstawa polska">
-                                <bcf:outputpl value="#{itempasekpod.przekroczeniekorektapodstawypolska}" rendered="#{itempasekpod.podstawaopodatkowaniazagranica eq 0.0}"/>
-                                <h:outputText value="bez zmian"  rendered="#{itempasekpod.podstawaopodatkowaniazagranica ne 0.0}"/>
+                                <bcf:outputpl value="#{itempasekpod.przekroczeniekorektapodstawypolska}" rendered="#{itempasekpod.przekroczeniekorektapodstawypolska ne itempasekpod.podstawaopodatkowania}"/>
                             </p:column>
                             <p:column headerText="podatek Polska">
                                 <bcf:outputpl value="#{itempasekpod.podatekdochodowy}"/>
