--- a/kadry/src/main/webapp/admin/index.xhtml
+++ b/kadry/src/main/webapp/admin/index.xhtml
@@ -264,6 +264,7 @@
 <!--                         <p:commandButton value="umowa" styleClass="buttonnorm" actionListener="#{swiadczeniekodzusView.generujtabele()}" />-->
 <!--                         <p:commandButton value="rodzaj" styleClass="buttonnorm" actionListener="#{definicjalistaplacView.generujtabele()}" />-->
 <!--                         <p:commandButton value="rob" styleClass="buttonnorm" actionListener="#{umowaView.rob()}" />-->
+                    <p:commandButton value="rob" styleClass="buttonnorm" actionListener="#{podatnikKsiegowaService.init()}" />
                 </h:form>
 
             </ui:define>
