naprawy drobne kadry, egzekucja

--- a/kadry/src/main/webapp/umowa/sub/dane_zmiennapotracenie.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_zmiennapotracenie.xhtml
@@ -72,7 +72,9 @@
                                 <f:facet name="header">
                                     <h:outputText value="kwota stała"/>
                                 </f:facet>
-                                <bcf:inputpl value="#{itemzmiennapotr.kwotastala}"/>
+                                <p:inputNumber id="urloplp" value="#{itemzmiennapotr.kwotastala}"  size="10"  maxlength="10" decimalPlaces="1" decimalSeparator="," inputStyle="text-align: right">
+                                    <p:ajax event="blur" partialSubmit="true" global="false" update="@parent:@parent" listener="#{zmiennaPotraceniaView.anulujustawowe(itemzmiennapotr)}"/>
+                                </p:inputNumber>
                             </p:column>
                             <p:column width="60">
                                 <f:facet name="header">
