--- a/npkpir_23/web/ksiegowa/sub/dokument_edycja.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokument_edycja.xhtml
@@ -61,14 +61,14 @@
                             <p:inputText id="dataPole" value="#{DokumentView.selDokument.dataWyst}"   accesskey="s" maxlength="10"
                                          style="height: 19px;" size="10"  required="true" requiredMessage="Pole daty nie może byc puste" immediate="false"  onblur="ustawDate(#{WpisView.rokWpisu},#{WpisView.miesiacWpisu});" title="wpisz numer dnia, lub miesiąc i dzień"  >
                                 <!--     archeo     <p:ajax event="blur" listener="{DokumentView.podlaczPierwszaKolumne()}" update=":dodWiad:tabelapkpir"  />-->
-                                <p:ajax event="blur" listener="#{DokumentView.zmienokresVAT}" global="false"/>
+                                <p:ajax event="change" listener="#{DokumentView.zmienokresVAT}" global="false" update="dodWiad:vatm dodWiad:rokm"/>
                             </p:inputText>
                         </p:column>
                         <p:column width="60">
                             <p:inputText id="dataSPole" value="#{DokumentView.selDokument.dataSprz}" size="10"
                                          onblur="ustawDateSprzedazy(#{WpisView.rokWpisu},#{WpisView.miesiacWpisu});" 
                                          required="true" requiredMessage="Pole daty sprzedaży nie może byc puste" >
-                                <p:ajax event="blur" listener="#{DokumentView.zmienokresVAT}" global="false"/>
+                                <p:ajax event="change" listener="#{DokumentView.zmienokresVAT}" global="false" update="dodWiad:vatm dodWiad:rokm"/>
                             </p:inputText>
                         </p:column>
                         <p:column>
@@ -218,7 +218,7 @@
                         <p:inputNumber id="kwotaPkpir1" value="#{row.nettowaluta}" symbol=" #{DokumentView.selDokument.tabelanbp.waluta.skrotsymbolu}" required="true" 
                                         requiredMessage="Brak kwoty - uzupełnij" style="text-align: right; height: 19px;" 
                                         symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" 
-                                        styleClass="wiersznetto" readonly="true">
+                                        styleClass="wiersznetto" >
                             <p:ajax event="blur" listener="#{DokumentView.przewalutuj(index)}" global="false" partialSubmit="true"
                                     update="dodWiad:sumbrutto"/>
                         </p:inputNumber>
