--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_plankont_edycja_nazw.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_plankont_edycja_nazw.xhtml
@@ -43,6 +43,8 @@
                     </p:selectOneMenu>
                     <h:outputText value="usuń przyporządkowanie"/>
                     <p:selectBooleanCheckbox value="#{planKontView.usunprzyporzadkowanie}"/>
+                    <h:outputText value="ma potomków"/>
+                    <p:selectBooleanCheckbox value="#{planKontView.selectednodekontoZmiana.mapotomkow}"/>
                     <h:outputText value=""/>
                     <p:commandButton value="edytuj" actionListener="#{planKontView.zmiananazwykonta()}" type="submit" update=":formedycjanazw :form_dialog_plankont" 
                                      style="float: right; margin-top: 10px; width: 120px;" oncomplete="PF('dialogedycjanazwkonta').hide();">
