--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_plankont_edycja_nazw.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_plankont_edycja_nazw.xhtml
@@ -35,7 +35,7 @@
                     <p:selectOneMenu  value="#{planKontView.selectednodekontoZmiana.syntetykaanalityka}" style="width: 170px;">
                         <f:selectItem itemLabel="wybierz" itemValue="" noSelectionOption="true"/>
                         <f:selectItem itemLabel="analityka" itemValue="analityka"/>
-                        <f:selectItem itemLabel="syntetyczne" itemValue="syntetyczne"/>
+                        <f:selectItem itemLabel="syntetyka" itemValue="syntetyka"/>
                         <f:selectItem itemLabel="rozrachunkowe/vat" itemValue="rozrachunkowe/vat"/>
                         <f:selectItem itemLabel="szczególne" itemValue="szczególne"/>
                         <f:selectItem itemLabel="zwykłe" itemValue="zwykłe"/>
