--- a/npkpir_23/web/ksiegowa/sub/dokument_edycja.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokument_edycja.xhtml
@@ -59,7 +59,8 @@
                     <p:row >
                         <p:column width="60">
                             <p:inputText id="dataPole" value="#{DokumentView.selDokument.dataWyst}"   accesskey="s" maxlength="10"
-                                         style="height: 19px;" size="10"  required="true" requiredMessage="Pole daty nie może byc puste" immediate="false"  onblur="ustawDate(#{WpisView.rokWpisu},#{WpisView.miesiacWpisu});" title="wpisz numer dnia, lub miesiąc i dzień"  >
+                                         style="height: 19px;" size="10"  required="true" requiredMessage="Pole daty nie może byc puste" immediate="false"  
+                                         onblur="ustawDateEdycja(#{WpisView.rokWpisu},#{WpisView.miesiacWpisu});" title="wpisz numer dnia, lub miesiąc i dzień"  >
                                 <!--     archeo     <p:ajax event="blur" listener="{DokumentView.podlaczPierwszaKolumne()}" update=":dodWiad:tabelapkpir"  />-->
                                 <p:ajax event="change" listener="#{DokumentView.zmienokresVAT}" global="false" update="dodWiad:vatm dodWiad:rokm"/>
                             </p:inputText>
