--- a/npkpir_23/web/ksiegowaFK/sub/podstrony/plankont/plankont.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/podstrony/plankont/plankont.xhtml
@@ -131,7 +131,7 @@
                     <p:column  style="width: 30px; text-align: center;" >
                         <h:outputText value="#{loop.mapotomkow == true ? '+' : null}" /> 
                     </p:column>
-                    <p:column headerText="nr konta" style="width: 100px;" styleClass="#{loop.level eq 2 ? 'druga' : null}" >
+                    <p:column headerText="nr konta" style="width: 100px;" styleClass="#{loop.level eq 2 ? 'druga' : null}" filterBy="#{loop.pelnynumer}" filterMatchMode="startsWith" >
                         <h:outputText value="#{loop.pelnynumer}" rendered="#{loop.nrkonta eq '0' ? false : (loop.level eq '0' ? true : false)}" /> 
                         <h:outputText value="#{loop.pelnynumer}" rendered="#{loop.nrkonta eq '0' ? false : (loop.level eq '1' ? true : false)}" style="margin-left: 10px;"/> 
                         <h:outputText value="#{loop.pelnynumer}" rendered="#{loop.nrkonta eq '0' ? false : (loop.level eq '2' ? true : false)}" style="margin-left: 20px;"/> 
