--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_bilans_roznice.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_bilans_roznice.xhtml
@@ -44,7 +44,7 @@
             <h:outputText value="wszystkie wiersze BO są w dokumencie BO" rendered="#{bilansRozniceView.wierszeBOroznice.size() eq 0}"/>
              <h:outputText value="Te wiersze BO nie zgadzają się/nie ma ich w dokumencie BO" rendered="#{bilansRozniceView.wierszeBOroznice.size() ne 0}"/>
              <p:dataTable value="#{bilansRozniceView.wierszeBOroznice}" var="item"
-                         style="overflow-y: scroll; height: 300px; width: 1200px; padding: 10px; margin-top: 5px;"
+                         style="overflow-y: scroll; height: 300px; width: 1250px; padding: 10px; margin-top: 5px;"
                          styleClass="gridtablicasyntetyczne" rowIndexVar="idx"  emptyMessage="nie ma zapisów w tej grupie"
                          rendered="#{bilansRozniceView.wierszeBOroznice.size() ne 0}"
                          rowKey="#{item.hashCode()}"
@@ -84,15 +84,25 @@
                     <f:facet name="header">
                         <h:outputText value="Kwota Wn"/>
                     </f:facet>
-                    <bcf:outputpl value="#{item.kwotaWn}" rendered="#{item.kwotaWn ne 0.0 and bilansWprowadzanieView.nraktualnejlisty ne 9}"/>
-                    <bcf:outputpl value="#{item.kwotaWnPLN}" rendered="#{item.kwotaWnPLN ne 0.0 and bilansWprowadzanieView.nraktualnejlisty eq 9}"/>
+                    <bcf:outputpl value="#{item.kwotaWn}"/>
+                </p:column>
+                  <p:column style="text-align: center;" sortBy="#{item.kwotaWnPLN}" width="90">
+                    <f:facet name="header">
+                        <h:outputText value="Kwota Wn pln"/>
+                    </f:facet>
+                    <bcf:outputpl value="#{item.kwotaWnPLN}"/>
                 </p:column>
                 <p:column style="text-align: center;" sortBy="#{item.kwotaMa}" width="90">
                     <f:facet name="header">
                         <h:outputText value="Kwota Ma"/>
                     </f:facet>
-                    <bcf:outputpl value="#{item.kwotaMa}" rendered="#{item.kwotaMa ne 0.0 and bilansWprowadzanieView.nraktualnejlisty ne 9}"/>
-                    <bcf:outputpl value="#{item.kwotaMaPLN}" rendered="#{item.kwotaMaPLN ne 0.0 and bilansWprowadzanieView.nraktualnejlisty eq 9}"/>
+                    <bcf:outputpl value="#{item.kwotaMa}" />
+                </p:column>
+                <p:column style="text-align: center;" sortBy="#{item.kwotaMa}" width="90">
+                    <f:facet name="header">
+                        <h:outputText value="Kwota Ma pln"/>
+                    </f:facet>
+                    <bcf:outputpl value="#{item.kwotaMaPLN}"/>
                 </p:column>
                   <p:column sortBy="#{item.nowy0edycja1usun2}" width="70" style="#{item.stylwiersza}" filterBy="#{item.nowy0edycja1usun2}" filterMatchMode="contains" filterStyle="width: 40px;">
                     <f:facet name="header">
@@ -120,7 +130,7 @@
             <h:outputText value="wszystkie wiersze z dokumentu BO są wierszach BO" rendered="#{bilansRozniceView.wierszeDokroznice.size() eq 0}"/>
             <h:outputText value="Te wiersze z dok BO nie zgadzają się/nie ma ich w wierszach BO" rendered="#{bilansRozniceView.wierszeDokroznice.size() ne 0}"/>
              <p:dataTable value="#{bilansRozniceView.wierszeDokroznice}" var="item2"
-                         style="overflow-y: scroll; height: 300px; width: 1050px; padding: 10px; margin-top: 5px;"
+                         style="overflow-y: scroll; height: 300px; width: 1250px; padding: 10px; margin-top: 5px;"
                          styleClass="gridtablicasyntetyczne" rowIndexVar="idx"  emptyMessage="nie ma zapisów w tej grupie"
                          rendered="#{bilansRozniceView.wierszeDokroznice.size() ne 0}"
                          rowKey="#{item2.hashCode()}"
@@ -159,9 +169,27 @@
                     <f:facet name="header">
                         <h:outputText value="Kwota Wn"/>
                     </f:facet>
-                    <bcf:outputpl value="#{item2.kwota}"/>
+                     <bcf:outputpl value="#{item2.kwotaWn}"/>
                 </p:column>
-                <p:column style="text-align: center;" sortBy="#{item2.kwotaMa}" width="90">
+                 <p:column style="text-align: center;" sortBy="#{item2.kwota}" width="90">
+                    <f:facet name="header">
+                        <h:outputText value="Kwota Wn pln"/>
+                    </f:facet>
+                     <bcf:outputpl value="#{item2.kwotaWnPLN}"/>
+                </p:column>
+                 <p:column style="text-align: center;" sortBy="#{item2.kwota}" width="90">
+                    <f:facet name="header">
+                        <h:outputText value="Kwota Ma"/>
+                    </f:facet>
+                    <bcf:outputpl value="#{item2.kwotaMa}"/>
+                </p:column>
+                 <p:column style="text-align: center;" sortBy="#{item2.kwota}" width="90">
+                    <f:facet name="header">
+                        <h:outputText value="Kwota Ma pln"/>
+                    </f:facet>
+                    <bcf:outputpl value="#{item2.kwotaMaPLN}"/>
+                </p:column>
+                <p:column style="text-align: center;" sortBy="#{item2.wierszbo.id}" width="90">
                     <f:facet name="header">
                         <h:outputText value="wiersz BO"/>
                     </f:facet>
