--- a/npkpir_23/web/ksiegowaFK/ksiegowaFKDokument.xhtml
+++ b/npkpir_23/web/ksiegowaFK/ksiegowaFKDokument.xhtml
@@ -103,6 +103,8 @@
 
                     <ui:include src="sub/dialog/dialog_zmiana_okresu.xhtml"/> 
                     <ui:include src="sub/dialog/dialog_bilans_wprowadzanie_3.xhtml"/>
+                    
+                    <ui:include src="sub/dialog/dialog_sinkosxls.xhtml"/> 
 
                 </p:layoutUnit><ui:include src="sub/layout/south.xhtml"/> 
             </p:layout>
